# skygazing

./: .gitignore  CMakeLists.txt  README.md  skygazing.h  skygazing.podspec  skygazing_math.h  skygazing_moon.h  skygazing_sky.h  skygazing_sun.h  skygazing_test.h  skygazing_test_aaplus.cpp  skygazing_test_analytics.h  skygazing_test_cases.h  skygazing_time.h
include/: skygazing.h
lib/: skygazing_math.h  skygazing_moon.h  skygazing_sky.h  skygazing_sun.h  skygazing_time.h
test/: skygazing_test.cpp  skygazing_test.h  skygazing_test_aaplus.cpp  skygazing_test_analytics.h  skygazing_test_cases.h
